<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_main"
    app:startDestination="@id/movieFragment">

    <fragment
        android:id="@+id/movieFragment"
        android:name="hera.flixnow.made.submission2.ui.components.movie.MovieFragment"
        android:label="MovieFragment"
        tools:layout="@layout/fragment_movie" />
    <fragment
        android:id="@+id/tvFragment"
        android:name="hera.flixnow.made.submission2.ui.components.tv.TvFragment"
        android:label="TvFragment"
        tools:layout="@layout/fragment_tv" />
    <fragment
        android:id="@+id/favoriteFragment"
        android:name="hera.flixnow.made.favorites.ui.FavoriteFragment"
        android:label="FavoriteFragment"
        tools:layout="@layout/fragment_favorite" />
</navigation>