...
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.3" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_gravity="bottom|end"
            app:tint="?colorOnSecondary"
            app:backgroundTint="?colorAccent"
...
